# general_tracking

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: mjlab_g1_tracker_plan_6b7a238c.plan.md
scripts/: build_manifest.sh  play.sh  train.sh
src/general_tracking/: __init__.py
src/general_tracking/cli/: __init__.py  play.py  train.py
src/general_tracking/data/: __init__.py  manifest.py  motion_library.py
src/general_tracking/data/cli/: __init__.py  build_manifest.py
src/general_tracking/learning/: __init__.py
src/general_tracking/learning/ppo/: __init__.py  l2c2.py
src/general_tracking/robots/g1/: __init__.py  action_scale.py  schema.py
src/general_tracking/tasks/: __init__.py
src/general_tracking/tasks/general_tracking/: __init__.py
src/general_tracking/tasks/general_tracking/config/g1/: __init__.py  env_cfgs.py  rl_cfg.py
src/general_tracking/tasks/general_tracking/mdp/: __init__.py  actions.py  commands.py  metrics.py  observations.py  rewards.py  terminations.py
src/general_tracking/tasks/general_tracking/rl/: __init__.py  evaluator.py  models.py  ppo.py  runner.py
tests/: test_action_scale.py  test_evaluator.py  test_l2c2.py  test_manifest_builder.py  test_motion_library.py  test_obs_helpers.py  test_ppo.py  test_reward_kernels.py  test_schema.py
